[package]
name = "bytemuck"
description = "A crate for mucking around with piles of bytes."
version = "2.0.0-pre1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/bytemuck"
readme = "README.md"
keywords = ["transmute", "bytes", "casting"]
categories = ["encoding", "no-std"]
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"
exclude = ["/pedantic.bat"]

[features]
# In v2 we'll fix these names to be more "normal".
derive = ["bytemuck_derive"]
alloc = []
std = ["alloc"]

# Do not use if you can avoid it, because this is unsound.
unsound_ptr_pod_impl = []

# NOT SEMVER SUPPORTED! TEMPORARY ONLY!
nightly_portable_simd = []

[dependencies]
bytemuck_derive = { version = "2.0.0-pre1", path = "derive", optional = true }

[package.metadata.docs.rs]
# Note(Lokathor): Don't use all-features or it would use `unsound_ptr_pod_impl` too.
features = [
  "derive",
  "alloc",
  "std",
]

[package.metadata.playground]
# Note(Lokathor): Don't use all-features or it would use `unsound_ptr_pod_impl` too.
features = [
  "derive",
  "alloc",
  "std",
]
